# cijue-tools

./: Cargo.toml  README.md  pyproject.toml
src/: main.rs
src/common/: output.rs
src/formats/: json.rs  mod.rs
src/paper/: get_bib.rs  get_paper_bib.py  mod.rs
